Fix required parameter in GenereteApi.java. Updated yaml
